# Tak-AI

./: CMakeLists.txt  README.md  board.cpp  board.h  hash.cpp  hash.h  helpers.h  main.cpp  mcts.h  movegen.cpp  player.h  player_human.cpp  player_minmax.cpp  tournament.cpp
